--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 
   <br>
 
-  <button id="generate">お題を生成</button>
+<button id="generate" style="font-size: 30px; padding: 50px 100px;">
+  お題を生成
+</button>
+
 
   <h2>結果</h2>
   <pre id="result"></pre>
